k8s/04-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-service
  namespace: todolist
spec:
  selector:
    app: todolist-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
  type: NodePort
